package org.champqcsoft.customerservice.dataaccesslayer;

public enum MembershipStatus {
    Active,
    Suspended,
    Closed
}
