package org.champqcsoft.productservice.commons.enums;

public enum Currency {
    USD,
    EUR,
    GBP,
    JPY,
    AUD,
    CAD
}
