package org.champqcsoft.productservice.commons.enums;

public enum CurrentEmploymentStatus {
    Employed,
    Fired,
    Suspended,
    InVacation
}
