package org.champqcsoft.productservice.commons.enums;


public enum PaymentMethod {
    Cash,
    Credit,
    Debit
}
