package org.champqcsoft.productservice.commons.enums;




public enum ProductAvailability {
    Available,
    NonAvailable,
    LastRemaining
}
